2011-04-20  Ken Brown  <kbrown@cornell.edu>
	* COPYING: New file.
	* coset.cc: Add copyright and licensing information.
	* coset.h: Ditto.
	* cosettable.cc: Ditto.
	* cosettable.h: Ditto.
	* gens_and_words.cc: Ditto.
	* gens_and_words.h: Ditto.
	* main.cc: Ditto.

2011-04-20  Ken Brown  <kbrown@cornell.edu>

	* main.cc (main): Remove unnecessary printing.
	* coset.cc (print): Add optional argument for standard printing
	[numbered from 1 instead of 0].  Improve formatting.
	* coset.h (print): Declare optional argument.
	* cosettable.h (print): Declare similar optional argument.
	* cosettable.cc (print, debug_print): Use standard printing except
	in debug_print().  Improve formatting.

2011-04-19  Ken Brown  <kbrown@cornell.edu>

	* cosettable.h (standardize): Declare new function.
	* cosettable.cc (standardize): Implement.
	* main.cc (main): Standardize final coset table.

2011-04-19  Ken Brown  <kbrown@cornell.edu>

	* cosettable.h (hlt_plus): Declare new function.
	* cosettable.cc (hlt_plus): Implement.
	* main.cc (main): Give user the option to use hlt_plus().

2011-04-19  Ken Brown  <kbrown@cornell.edu>

	* cosettable.h (scan, lookahead, compress): Declare new functions.
	* cosettable.cc (scan, lookahead, compress): Implement.
	* main.cc (main): Compress coset table.

2011-04-17  Ken Brown  <kbrown@cornell.edu>

	* main.cc (main): Clean up output.
	* cosettable.h (get_nlive): Declare new function.
	* cosettable.cc (scan_and_fill): Remove debugging output.
	(print) Use new print method of Coset class.
	(debug_print): Ditto.
	(get_nlive): Implement.
	* coset.h (print): Declare new function.
	* coset.cc (print): Implement.

2011-04-17  Ken Brown  <kbrown@cornell.edu>

	* Makefile (main.o, cosettable.o): Add dependency on coset.h.
	* Makefile.cygwin (main.o, cosettable.o): Ditto.
	* Makefile.linux (main.o, cosettable.o): Ditto.
	* main.cc (main): Move main functionality into two new functions...
	(getgroup):  New function.