@@ -1,0 +1,28 @@
+toddcox TODO list                                                 -*-outline-*-
+
+Copyright (C) 2011 Kenneth S. Brown.
+See the end of the file for license conditions.
+
+
+This file is part of toddcox.
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version (GPLv3+).
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+* README
+
+* INSTALL
+
+* Documentation
+
+* Rewrite handout (which can be mentioned in documentation).
